--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">TNGP World Cup</string>
+    <string name="contest_description">contest description</string>
+    <string name="play">play</string>
+    <string name="world_cup_date">14 Jun - 15 Jul 2018</string>
 </resources>
